# voice-notes-desktop

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml  release.yml
docs/: deployment.md  jira-integration.md  security-audit-v1.md
src/agenius_note/theme/: qss_template.py
src/agenius_note/ui/: sidebar.py
src/voice_notes/: __main__.py
src/voice_notes/core/: ai_parse.py  anthropic_parse.py  db.py  keystore.py  ollama_parse.py  tts.py
src/voice_notes/theme/: qss_template.py
src/voice_notes/ui/: capture_panel.py  main_window.py  quick_note_panel.py  quick_todos_panel.py  settings_dialog.py  setup_wizard.py
tests/: test_keystore.py
